# LLM-Evaluation-Harness-with-Guardrails

./: .env.sample  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  regression-smoke.yml
data/adversarial/: injections.yaml  jailbreaks.yaml  safety.yaml
data/corpus/: 00_welcome.md  01_product.md  02_security.md
data/qa/: demo_qa.jsonl
data/rails/: answer_schema.json
reports/: baseline_metrics.json
src/evalguard/: __init__.py  cli.py  config.py  logging.py  utils.py
src/evalguard/embeddings/: __init__.py  embedder.py
src/evalguard/evaluation/: __init__.py  comparison.py  judge.py  ragas_runner.py  regression.py  reporting.py  safety.py  trulens_runner.py
src/evalguard/pipelines/: __init__.py  guardrails.py  rag_pipeline.py
src/evalguard/providers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  base.py  ollama_provider.py  openai_provider.py  rate_limit.py  telemetry.py
src/evalguard/vectorstore/: __init__.py  chroma_store.py  ingest.py
tests/: test_citations.py  test_config.py  test_evaluations.py  test_guardrails_schema.py  test_rag_pipeline.py  test_vectorstore.py
